fixed viewing issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,10 @@ a {
     z-index: 100;
   }
 
+  p {
+    font-size: medium;
+  }
+
   nav a {
     color: #ffffff;
     text-decoration: none;
@@ -265,7 +269,7 @@ a {
   }
 
   .hero-section h1 {
-    font-size: 60px;
+    font-size: 30px;
     flex-shrink: 5;
 
     text-align: center;
@@ -275,7 +279,7 @@ a {
   }
 
   button {
-    padding: 16px;
+    padding: 12px;
     border-radius: var(--border-radius);
     border: none;
 
@@ -386,7 +390,7 @@ a {
 
   .about-section h1 {
     margin-top: 80px;
-    font-size: 60px;
+    font-size: 30px;
     flex-shrink: 5;
 
     text-align: left;
@@ -395,12 +399,13 @@ a {
   }
 
   .about-section p {
-    text-align: left;
+    text-align: center;
   }
 
   /*for game pages*/
   .game.hero-section {
     background-image: linear-gradient(-90deg, #ffffff00, #000000), url("jump-fish-game.jpeg");
+    background-size: cover;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -441,7 +446,7 @@ a {
   .showcase-section .header {
     display: flex;
     height: 40vh;
-    width: 33.3%;
+    width: 60%;
     text-align: left;
     flex-flow: column nowrap;
 
@@ -449,7 +454,7 @@ a {
   }
 
   .showcase-section h1 {
-    font-size: 60px;
+    font-size: 30px;
     flex-shrink: 5;
 
     height: fit-content;
@@ -459,8 +464,8 @@ a {
 
   #fish-game-showcase {
     background-image: linear-gradient(-90deg, #ffffff00, #000000), url("jump-fish-death.jpeg");
-    background-position: 0px 80%;
-    background-size: 150%;
+    background-size: 100%;
+    background-size: cover;
 
     margin: 16px;
     border-radius: var(--border-radius);
@@ -492,7 +497,7 @@ a {
   }
 
   .download-section h1 {
-    font-size: 60px;
+    font-size: 30px;
     flex-shrink: 5;
 
     height: fit-content;
@@ -879,7 +884,7 @@ a {
   }
 
   .about-section p {
-    text-align: left;
+    text-align: center;
   }
 
   /*for game pages*/
@@ -925,7 +930,7 @@ a {
   .showcase-section .header {
     display: flex;
     height: 40vh;
-    width: 33.3%;
+    width: 50%;
     text-align: left;
     flex-flow: column nowrap;
 
